--- a/index.html
+++ b/index.html
@@ -41,18 +41,30 @@
             max-width: 800px;
             margin: auto;
         }
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
         .nft {
-            margin: 20px 0;
-            padding: 20px;
             background-color: rgba(255, 255, 255, 0.1);
             border-radius: 10px;
+            overflow: hidden;
+            width: 200px;
+            text-align: center;
+            padding: 10px;
         }
         .nft img {
-            max-width: 100%;
+            width: 100%;
             border-radius: 10px;
         }
         .nft h3 {
-            margin-top: 10px;
+            margin: 10px 0;
+        }
+        .nft p {
+            margin: 0;
+            font-size: 14px;
         }
     </style>
 </head>
@@ -68,17 +80,19 @@
         </section>
         <section>
             <h2>Colecția Mea de NFT-uri</h2>
-            <div class="nft">
-                <img src="URL_IMAGINE_NFT" alt="NFT 1">
-                <h3>NFT 1</h3>
-                <p>Descrierea NFT-ului 1.</p>
+            <div class="gallery">
+                <div class="nft">
+                    <img src="URL_IMAGINE_NFT1" alt="NFT 1">
+                    <h3>NFT 1</h3>
+                    <p>Descrierea NFT-ului 1.</p>
+                </div>
+                <div class="nft">
+                    <img src="URL_IMAGINE_NFT2" alt="NFT 2">
+                    <h3>NFT 2</h3>
+                    <p>Descrierea NFT-ului 2.</p>
+                </div>
+                <!-- Adaugă mai multe NFT-uri aici -->
             </div>
-            <div class="nft">
-                <img src="URL_IMAGINE_NFT" alt="NFT 2">
-                <h3>NFT 2</h3>
-                <p>Descrierea NFT-ului 2.</p>
-            </div>
-            <!-- Adaugă mai multe NFT-uri aici -->
         </section>
         <section>
             <h2>Contact</h2>
