--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('images/Di.png');
+            background-image: url('images/Di.PNG');
             background-size: cover;
             background-position: center;
             color: #fff;
