--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             background-image: url('images/Di.PNG');
-            background-size: cover;
+            background-size: contain;
             background-position: center;
             color: #fff;
             text-shadow: 0 1px 3px rgba(0,0,0,0.3);
@@ -70,13 +70,13 @@
 </head>
 <body>
     <header>
-        <h1>RAZDIA</h1>
+        <h1>DRT</h1>
         <p>Prezentare NFT-uri</p>
     </header>
     <main class="container">
         <section>
             <h2>Despre Mine</h2>
-            <p>Sunt Razvan și aceasta este pagina mea personală dedicată NFT-urilor. Aici vei găsi informații despre colecția mea de NFT-uri și detalii despre fiecare piesă.</p>
+            <p>Sunt Diana și aceasta este pagina mea personală dedicată NFT-urilor. Aici vei găsi informații despre colecția mea de NFT-uri și detalii despre fiecare piesă.</p>
         </section>
         <section>
             <h2>Colecția Mea de NFT-uri</h2>
@@ -96,7 +96,7 @@
         </section>
         <section>
             <h2>Contact</h2>
-            <p>Pentru a mă contacta, poți să-mi trimiți un email la <a href="mailto:razvan@example.com">razvan@example.com</a>.</p>
+            <p>Pentru a mă contacta, poți să-mi trimiți un email la <a href="mailto:razvan@example.com">diana@example.com</a>.</p>
         </section>
     </main>
     <footer>
