--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             background-image: url('images/Di.PNG');
-            background-size: 100% 100%;
+            background-size: contain;
             background-position: center;
             color: #fff;
             text-shadow: 0 1px 3px rgba(0,0,0,0.3);
