--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
             margin: 0;
             padding: 0;
             background-image: url('images/Di.PNG');
-            background-size: auto;
+            background-size: contain;
             background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
             color: #fff;
             text-shadow: 0 1px 3px rgba(0,0,0,0.3);
         }
