--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             background-position: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            color: #fff;
+            color: #00ff00;
             text-shadow: 0 1px 3px rgba(0,0,0,0.3);
         }
         header {
