--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             background-image: url('images/Di.PNG');
-            background-size: contain;
+            background-size: 100vw 100vh;
             background-position: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
