--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         header {
             background-color: rgba(0, 0, 0, 0.5);
-            color: #fff;
+            color: #00ff00;
             padding: 10px 0;
             text-align: center;
         }
@@ -32,7 +32,7 @@
         }
         footer {
             background-color: rgba(0, 0, 0, 0.5);
-            color: #fff;
+            color:#00ff00;
             text-align: center;
             padding: 10px 0;
             position: fixed;
